[bumpversion]
current_version = 0.3.0
commit = True
tag = True

[metadata]
description-file = README.rst
license-file = LICENSE

[bumpversion:file:apistar_auth/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:README.rst]
search = :Version: {current_version}
replace = :Version: {new_version}

[tool:pytest]
minversion = 3
norecursedirs = 
	*settings*
	*urls*
	.tox*
	*docs*

[coverage:run]
source = .
branch = True
omit = 
	*settings*
	*__init__.py
	*urls*
	.tox*
	*tests*
	*/migrations/*
	*/features/*
	*manage.py
	*wsgi.py
	*celery.py
	*apps.py
	run*
	build.py

[coverage:report]
show_missing = True
ignore_errors = True
fail_under = 90
exclude_lines = 
	pragma: no cover
	raise AssertionError
	raise NotImplementedError
	if 0:
	if __name__ == .__main__.:
	def __repr__
	if cls\.debug
	if settings\.DEBUG

[coverage:paths]
source = ./

[coverage:html]
directory = .test_report/coverage_html/

[coverage:xml]
output = .test_report/coverage.xml

[pep8]
ignore = N804
max-line-length = 80

